--- a/edu.html
+++ b/edu.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://github.com/stephenturner/stephenturner.github.io/blob/master/edu.md"> 
+<meta http-equiv="refresh" content="0; url=https://gist.github.com/stephenturner/746384284fe9902f824993ca0b9dc1fa"> 
