--- a/explain-flags.html
+++ b/explain-flags.html
@@ -16,15 +16,31 @@
         ["supplementary alignment", 0x800]];
     function explainFlags() {
         var flagValue = parseInt(document.getElementById('tb').value); //returns 0 or NaN if can't parse
-        var summary = "";
+        var summary  = ""; 
+        var badFlags = [];   // Stores the flags that don't make sense with unpaired reads
+        var hexString  = ""; // indicator for the user which flags are invalid with unpaired reads
+        var pairedRead = lstFlags[0][1] & flagValue;
         for(var i = 0; i < lstFlags.length; i++) {
             var checkbox = document.getElementById('cb' + i)
             if(lstFlags[i][1] & flagValue) {
-                summary  += " &nbsp; &nbsp; " + lstFlags[i][0] + "<br>";
+                hexString = " (0x" + lstFlags[i][1].toString(16) + ")";
+                if (!pairedRead && (lstFlags[i][1] & 235)) {
+                    badFlags.push(" 0x" + lstFlags[i][1].toString(16));
+                    hexString += "<b>*</b>";
+                }
+                summary  += " &nbsp; &nbsp; " + lstFlags[i][0] + hexString + "<br>";
                 checkbox.checked = true;
             } else {
                 checkbox.checked = false;
             }
+        }
+        if (badFlags.length > 0){
+            if (badFlags.length == 2){
+                badFlags = badFlags.join(" and ");
+            } else {
+                badFlags[badFlags.length - 1] = " and" + badFlags[badFlags.length - 1];
+            }
+            summary += "<br> &nbsp; &nbsp; <b>*Warning:</b> Flag(s)" + badFlags + " cannot be set when read is not paired";
         }
         document.getElementById('summary').innerHTML = summary;
     }
@@ -68,7 +84,7 @@
     <form onSubmit="explainFlags(); return false;" action="">
 
         <p>To decode a given SAM flag value, just enter the number in the field below. The encoded properties will be listed under Summary below, to the right.</p>
-        <strong>SAM Flag:</strong> &nbsp;
+        SAM Flag: &nbsp;
         <input id="tb" type=text size=10 /> &nbsp; &nbsp; &nbsp;
         <input type=submit value="Explain" />
         <br /><br />
