--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 
 <head>
-    <title>Stephen D. Turner, Ph.D.</title>
+    <title>Cathal King</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="fragment" content="!">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
